tests/fuse/core/types/annotation_unknown_error.fuse
// EXPECTED ERROR:
// error: unknown annotation `@typo`

@typo
fn broken() {
  println("unreachable")
}

@entrypoint
fn main() {
  broken()
}
